--- a/pom.xml
+++ b/pom.xml
@@ -94,36 +94,53 @@
                 </executions>
             </plugin>
 
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
-            <!--                <version>2.21.0</version>-->
-            <!--                <configuration>-->
-            <!--                    &lt;!&ndash; Tests will be run with scalatest-maven-plugin instead &ndash;&gt;-->
-            <!--                    <skipTests>true</skipTests>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
-            <!--            <plugin>-->
-            <!--                <groupId>org.scalatest</groupId>-->
-            <!--                <artifactId>scalatest-maven-plugin</artifactId>-->
-            <!--                <version>2.0.0</version>-->
-            <!--                <configuration>-->
-            <!--                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>-->
-            <!--                    <junitxml>.</junitxml>-->
-            <!--                    <filereports>TestSuiteReport.txt</filereports>-->
-            <!--                    &lt;!&ndash; Comma separated list of JUnit test class names to execute &ndash;&gt;-->
-            <!--                    <jUnitClasses>samples.AppTest</jUnitClasses>-->
-            <!--                </configuration>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <id>test</id>-->
-            <!--                        <goals>-->
-            <!--                            <goal>test</goal>-->
-            <!--                        </goals>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <!-- Tests will be run with scalatest-maven-plugin instead -->
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
 
+            <plugin>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <configuration>
+                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                    <junitxml>.</junitxml>
+                    <filereports>TestSuiteReport.txt</filereports>
+                    <!-- Comma separated list of JUnit test class names to execute -->
+                    <jUnitClasses>samples.AppTest</jUnitClasses>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>test</id>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
