--- a/pom.xml
+++ b/pom.xml
@@ -108,13 +108,13 @@
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
                 <version>2.0.0</version>
-                <configuration>
-                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                    <junitxml>.</junitxml>
-                    <filereports>TestSuiteReport.txt</filereports>
+<!--                <configuration>-->
+<!--                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>-->
+<!--                    <junitxml>.</junitxml>-->
+<!--                    <filereports>TestSuiteReport.txt</filereports>-->
                     <!-- Comma separated list of JUnit test class names to execute -->
-                    <jUnitClasses>samples.AppTest</jUnitClasses>
-                </configuration>
+<!--                    <jUnitClasses>samples.AppTest</jUnitClasses>-->
+<!--                </configuration>-->
                 <executions>
                     <execution>
                         <id>test</id>
